erDiagram
    hotels {
        bigint id PK
        string name
        int stars
        string ville
        text description
        string telephone
        string email
        string adresse
        string rib
        decimal taxe_sejour
        decimal agency_ratio
        decimal group_ratio
    }

    types {
        bigint id PK
        string nom
        text description
        string color
    }

    sub_types {
        bigint id PK
        bigint id_type FK
        string nom
        string color
        int max_adults
        int max_children
        int capacity_total
    }

    chambres {
        bigint id PK
        string numero
        bigint id_hotel FK
        bigint id_type FK
        bigint id_sub_type FK
        string uq_hotel_numero UK
    }

    tarifs {
        bigint id PK
        bigint id_hotel FK
        bigint id_type FK
        bigint id_sub_type FK
        decimal prix
        date date_debut
        date date_fin
    }

    reservations {
        bigint id PK
        bigint id_hotel FK
        string nom_agence
        string nom_contact
        string code_agence
        string email
        string telephone
        int nb_personnes
        decimal prix_total
        decimal taxe_sejour_total
        string statut
        string code_reference UK
        string token UK
        string payment_link
        decimal paid_amount
        decimal total_amount
        string type_reservant
        decimal remise_pourcentage
        decimal prix_avant_remise
    }

    reservation_groups {
        bigint id PK
        bigint id_reservation FK
        date date_arrivee
        date date_depart
        int nb_personnes
        decimal remise_pourcentage
        decimal remise_montant
    }

    reservation_items {
        bigint id PK
        bigint id_group FK
        bigint id_type FK
        bigint id_sub_type FK
        int quantite
        decimal prix_unitaire
        int nb_adultes
        int nb_enfants
    }

    payment_verifications {
        bigint id PK
        bigint id_reservation FK
        string document_path
        decimal amount
        string statut
    }

    discount_rules {
        bigint id PK
        bigint id_hotel FK
        int min_nights
        decimal discount_percentage
    }

    hotel_type_tarification {
        bigint id PK
        bigint id_hotel FK
        bigint id_type FK
        string uq_hotel_type UK
    }

    app_settings {
        bigint id PK
        string key UK
        text value
        string label
        string type
        text description
    }

    email_templates {
        bigint id PK
        string slug UK
        string name
        string subject
        text content_html
        text content_json
    }

    users {
        bigint id PK
        string name
        string email UK
        string password
    }

    notifications {
        uuid id PK
        string type
        string notifiable_type
        bigint notifiable_id
        text data
        timestamp read_at
        timestamp created_at
        timestamp updated_at
    }

    hotels ||--o{ chambres : FK_id_hotel
    types ||--o{ chambres : FK_id_type
    sub_types ||--o{ chambres : FK_id_sub_type

    hotels ||--o{ tarifs : FK_id_hotel
    types ||--o{ tarifs : FK_id_type
    sub_types ||--o{ tarifs : FK_id_sub_type

    hotels ||--o{ reservations : FK_id_hotel
    reservations ||--|{ reservation_groups : FK_id_reservation
    reservation_groups ||--|{ reservation_items : FK_id_group
    types ||--o{ reservation_items : FK_id_type
    sub_types ||--o{ reservation_items : FK_id_sub_type

    reservations ||--o{ payment_verifications : FK_id_reservation
    hotels ||--o{ discount_rules : FK_id_hotel
    hotels ||--o{ hotel_type_tarification : FK_id_hotel
    types ||--o{ hotel_type_tarification : FK_id_type
    types ||--o{ sub_types : FK_id_type

    users ||--o{ notifications : "FK polymorphe notifiable_id + notifiable_type=User"

%% email_templates et app_settings : referentiels sans cle etrangere vers users ni notifications
%% (emails transactionnels via slug / HasDynamicTemplate ; parametres globaux lus par cle dans le code)
